CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(HM_FUNC_TEST)

set (HM_FUNC_TEST_ROOT_DIRECTORY ${PROJECT_SOURCE_DIR})

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules)

include(AddGMock)
add_gmock()

set (HM_FUNC_TEST_OUTPUT_DIRECTORY_NAME bin)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${HM_FUNC_TEST_ROOT_DIRECTORY}/${HM_FUNC_TEST_OUTPUT_DIRECTORY_NAME})
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${HM_FUNC_TEST_ROOT_DIRECTORY}/${HM_FUNC_TEST_OUTPUT_DIRECTORY_NAME})
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${HM_FUNC_TEST_ROOT_DIRECTORY}/${HM_FUNC_TEST_OUTPUT_DIRECTORY_NAME})

set (HM_FUNC_TEST_DIRECTORY ${HM_FUNC_TEST_ROOT_DIRECTORY}/unit_tests)

add_subdirectory(unit_tests HM_FUNC_TEST_DIRECTORY)
